--- a/public/global.css
+++ b/public/global.css
@@ -2,6 +2,7 @@
 :root {
   --bg: ##0000005e;
   --text: #e2e8f0;
+  --sub-text: #b6c7dd;
   --box: #619d9db0;
   --title: #2dab6b;
   --link:#61a7e2;
@@ -22,6 +23,13 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+span{
+  color: var(--link);
+}
+p:hover{
+  transform: translateY(-5px);
+  transition: .5s;
 }
 
 
