--- a/public/index.css
+++ b/public/index.css
@@ -545,18 +545,6 @@ video {
   display: none;
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
 .pointer-events-none {
   pointer-events: none;
 }
@@ -627,6 +615,10 @@ video {
 
 .top-2 {
   top: 0.5rem;
+}
+
+.top-3 {
+  top: 0.75rem;
 }
 
 .top-8 {
@@ -718,10 +710,6 @@ video {
 
 .inline-block {
   display: inline-block;
-}
-
-.inline {
-  display: inline;
 }
 
 .flex {
@@ -874,6 +862,10 @@ video {
 
 .max-w-\[300px\] {
   max-width: 300px;
+}
+
+.max-w-\[500px\] {
+  max-width: 500px;
 }
 
 .max-w-\[600px\] {
@@ -1048,6 +1040,19 @@ video {
   border-width: 0px;
 }
 
+.border-\[0\.5px\] {
+  border-width: 0.5px;
+}
+
+.border-\[\#ae4998\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(174 73 152 / var(--tw-border-opacity, 1));
+}
+
+.bg-\[\#000000a6\] {
+  background-color: #000000a6;
+}
+
 .bg-\[\#100d0d56\] {
   background-color: #100d0d56;
 }
@@ -1059,6 +1064,11 @@ video {
 .bg-\[\#346697\] {
   --tw-bg-opacity: 1;
   background-color: rgb(52 102 151 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#6b245c\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 36 92 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#fff\] {
@@ -1151,6 +1161,11 @@ video {
   padding-bottom: 0.375rem;
 }
 
+.py-9 {
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
+}
+
 .pt-\[100px\] {
   padding-top: 100px;
 }
@@ -1215,12 +1230,21 @@ video {
   color: var(--link);
 }
 
+.text-\[var\(--sub-text\)\] {
+  color: var(--sub-text);
+}
+
 .text-\[var\(--text\)\] {
   color: var(--text);
 }
 
 .text-\[var\(--title\)\] {
   color: var(--title);
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
 .text-inherit {
