--- a/public/global.css
+++ b/public/global.css
@@ -2,7 +2,7 @@
 :root {
   --bg: ##0000005e;
   --text: #e2e8f0;
-  --sub-text: #b6c7dd;
+  --sub-text: ##ede8e8;
   --box: #619d9db0;
   --title: #2dab6b;
   --link:#61a7e2;
