--- a/public/index.css
+++ b/public/index.css
@@ -788,20 +788,16 @@ video {
   height: 1rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
-.max-h-4 {
-  max-height: 1rem;
-}
-
 .max-h-\[200px\] {
   max-height: 200px;
 }
 
 .max-h-\[60\%\] {
   max-height: 60%;
+}
+
+.min-h-4 {
+  min-height: 1rem;
 }
 
 .min-h-\[45px\] {
@@ -860,12 +856,24 @@ video {
   width: 100vw;
 }
 
-.w-4 {
-  width: 1rem;
+.w-\[20px\] {
+  width: 20px;
 }
 
-.w-8 {
-  width: 2rem;
+.w-\[40px\] {
+  width: 40px;
+}
+
+.min-w-4 {
+  min-width: 1rem;
+}
+
+.min-w-\[10px\] {
+  min-width: 10px;
+}
+
+.min-w-\[20px\] {
+  min-width: 20px;
 }
 
 .max-w-\[1600px\] {
@@ -1052,11 +1060,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-b-full {
-  border-bottom-right-radius: 9999px;
-  border-bottom-left-radius: 9999px;
-}
-
 .border-0 {
   border-width: 0px;
 }
@@ -1222,6 +1225,11 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
